# MChat

./: Cargo.toml  README.md  mchat.logo
src/: 404.html  lib.rs  llm.rs  main.rs  post.rs  rata.rs  server.rs  term.rs
