[package]
name = "Server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/server.rs"
[[bin]]
name = "term"
path = "./src/term.rs"
[[bin]]
name = "rata"
path = "./src/rata.rs"





[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.21.0"
reqwest = { version = "0.11", features = ["json" , "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
